--- a/pipelines.resources.yml
+++ b/pipelines.resources.yml
@@ -1,12 +1,12 @@
 resources:
-  - name: bb_test_jenkins
+  - name: bb_test_jenkins_git
     type: GitRepo
     configuration:
       gitProvider: git_bh
       path: benharosh/test_multibranch
       branches:
         include: ^{{gitBranch}}$
-  - name: jenkins_reource
+  - name: jenkins_reource_git
     type: PropertyBag
     configuration:
       passing: 0
