--- a/pipelines.steps.yml
+++ b/pipelines.steps.yml
@@ -4,6 +4,7 @@ pipelines:
     - name: test_app
       type: Jenkins
       configuration:
+        priority: 2      
         jenkinsJobName: github/multibranch
         jenkinsBranchName: {{gitBranch}}
         buildParameters:
@@ -15,6 +16,32 @@ pipelines:
         outputResources:
           - name: jenkins_reource_git
     - name: print_results
+      type: Bash
+      configuration:
+        priority: 1        
+        inputResources:
+          - name: jenkins_reource_git
+      execution:
+        onExecute:
+          - printenv
+          
+  - name: test_jenkins_git2
+    steps:
+    - name: test_app2
+      type: Jenkins
+      configuration:
+        priority: 1      
+        jenkinsJobName: github/multibranch
+        jenkinsBranchName: {{gitBranch}}
+        buildParameters:
+            PARAM1: value1
+            PARAM2: value2
+            PARAM3: value3
+        integrations:
+          - name: jenkins
+        outputResources:
+          - name: jenkins_reource_git
+    - name: print_results2
       type: Bash
       configuration:
         inputResources:
