--- a/pipelines.steps.yml
+++ b/pipelines.steps.yml
@@ -27,27 +27,27 @@ pipelines:
         onExecute:
           - printenv
           
-    - name: test_app2
-      type: Jenkins
-      configuration:
-        priority: 1      
-        jenkinsJobName: github/multibranch
-        jenkinsBranchName: {{gitBranch}}
-        buildParameters:
-            PARAM1: value1
-            PARAM2: value2
-            PARAM3: value3
-        integrations:
-          - name: jenkins
-        outputResources:
-          - name: jenkins_reource_git
-    - name: print_results2
-      type: Bash
-      configuration:
-        inputSteps:
-          - name: test_app2
-        inputResources:
-          - name: jenkins_reource_git
-      execution:
-        onExecute:
-          - printenv
+#     - name: test_app2
+#       type: Jenkins
+#       configuration:
+#         priority: 1      
+#         jenkinsJobName: github/multibranch
+#         jenkinsBranchName: {{gitBranch}}
+#         buildParameters:
+#             PARAM1: value1
+#             PARAM2: value2
+#             PARAM3: value3
+#         integrations:
+#           - name: jenkins
+#         outputResources:
+#           - name: jenkins_reource_git
+#     - name: print_results2
+#       type: Bash
+#       configuration:
+#         inputSteps:
+#           - name: test_app2
+#         inputResources:
+#           - name: jenkins_reource_git
+#       execution:
+#         onExecute:
+#           - printenv
