--- a/pipelines.steps.yml
+++ b/pipelines.steps.yml
@@ -18,7 +18,7 @@ pipelines:
       configuration:
 #         priority: 1     
         jenkinsJobName: vijay_jenkins
-        jenkinsBranchName: {{gitBranch}}
+#         jenkinsBranchName: {{gitBranch}}
         buildParameters:
             PARAM1: value1
             PARAM2: value2
