--- a/pipelines.steps.yml
+++ b/pipelines.steps.yml
@@ -19,10 +19,10 @@ pipelines:
 #         priority: 1     
         jenkinsJobName: vijay_jenkins
 #         jenkinsBranchName: {{gitBranch}}
-        buildParameters:
-            PARAM1: value1
-            PARAM2: value2
-            PARAM3: value3
+#         buildParameters:
+#             PARAM1: value1
+#             PARAM2: value2
+#             PARAM3: value3
         integrations:
           - name: jenkins
         inputSteps:
